--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "axios": "^0.26.1"
+    "axios": "^0.26.1",
+    "chalk": "^5.0.1"
   },
   "scripts": {
     "dev": "nodemon",
