--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "typings": "dist/index.d.ts",
   "author": "Nanami",
   "license": "MIT",
-  "files": [ "dist" ],
+  "files": [
+    "dist"
+  ],
   "dependencies": {
     "axios": "^0.26.1"
   },
@@ -18,6 +20,7 @@
     "build:declare": "rimraf ./dist && tsc --outdir dist --emitDeclarationOnly"
   },
   "devDependencies": {
+    "@types/node": "^17.0.25",
     "dotenv": "^16.0.0",
     "rimraf": "^3.0.2",
     "typescript": "^4.6.3"
