--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "nideriji-api-server",
   "version": "0.1.0",
+  "author": "Nanami",
+  "license": "MIT",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,15 +11,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/jest": "^27.4.1",
+    "jest": "^27.5.1",
     "next": "12.1.5",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-dom": "18.0.0",
+    "ts-jest": "^27.1.4"
   },
   "devDependencies": {
-    "@types/jest": "^27.4.1",
+    "@types/node": "17.0.25",
+    "@types/react": "18.0.5",
+    "@types/react-dom": "18.0.1",
     "eslint": "8.13.0",
     "eslint-config-next": "12.1.5",
-    "jest": "^27.5.1",
-    "ts-jest": "^27.1.4"
+    "typescript": "4.6.3"
   }
 }
