--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "build:pub": "rimraf ./dist && tsc -d",
     "build:d": "rimraf ./dist && tsc --outdir dist --emitDeclarationOnly",
     "release": "yarn build:pub && yarn publish",
-    "pub": "yarn release"
+    "pub": "yarn release",
+    "push": "git push origin && git push azure"
   },
   "devDependencies": {
     "@types/node": "^17.0.25",
