--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "build:d": "rimraf ./dist && tsc --outdir dist --emitDeclarationOnly",
     "release": "yarn build:pub && yarn publish",
     "pub": "yarn release",
-    "push": "git push origin && git push azure"
+    "push": "git push origin && git push azure",
+    "prepublish": "git build:pub"
   },
   "devDependencies": {
     "@types/node": "^17.0.25",
