--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nideriji-api",
-  "version": "0.2.7",
+  "version": "0.2.8",
   "description": "API of Nideriji and Ohshenghuo.",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -19,12 +19,18 @@
     "build:pub": "rimraf ./dist && tsc -d",
     "build:d": "rimraf ./dist && tsc --outdir dist --emitDeclarationOnly",
     "push": "git push origin && git push azure",
-    "prepublish": "yarn build:pub"
+    "prepublish": "yarn build:pub",
+    "test": "jest",
+    "main": "node --require ts-node/register test/index.ts"
   },
   "devDependencies": {
+    "@types/jest": "^27.4.1",
     "@types/node": "^17.0.25",
     "dotenv": "^16.0.0",
+    "jest": "^27.5.1",
     "rimraf": "^3.0.2",
+    "ts-jest": "^27.1.4",
+    "ts-node": "^10.7.0",
     "typescript": "^4.6.3"
   }
 }
