--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nideriji-api-server",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "author": "Nanami",
   "license": "MIT",
   "private": true,
@@ -15,7 +15,7 @@
     "@types/jest": "^27.4.1",
     "jest": "^27.5.1",
     "next": "12.1.5",
-    "nideriji-api": "0.2.11-alpha.1",
+    "nideriji-api": "^0.3.1",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "ts-jest": "^27.1.4"
